2006-10-30  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* setup.py: Remove setup.py, which has been replaced by makefiles.

2006-10-28  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* src/lib/gnome_sudoku.py:
	* src/lib/game_selector.py:
	* images/footprints.png:
	* images/winner.png:
	* images/Makefile.am:
	* glade/high_scores.glade: Clean up image usage, for instance
	we can't use and modify the GNOME logo, because it's a trademark.

2006-10-27  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* src/lib/gsudoku_copy.py: 
	* src/lib/sudoku.py: Remove dependency upon Python Numeric.
	* src/lib/gnome_sudoku.py: Reorder help menu items.
	* src/gnome-sudoku: Bug #364646 – Don't hardcode reference
	  to /usr/bin/python binary

2006-10-20  Thomas M. Hinkle  <thomas_hinkle@sf.net>

	* src/lib/defaults.py: Get translations from gnome-games domain.

2006-10-20  Thomas M. Hinkle  <thomas_hinkle@sf.net>

	* Fixed typo that made always-show-hints persist even after it was
	  unchecked.
		  

2006-10-18  Thomas M. Hinkle  <thomas_hinkle@sf.net>

	* Fixed bug that caused GNOME Sudoku to hang when on "New Game"
     	  screen (related to recursive mainloop)
	* Fixed bug related to Undo that caused some moves not to register
	  in the internal representation of the sudoku grid (which
	  resulted in the game-finished-but-no-high-scores bug).

2006-10-16  Thomas M. Hinkle  <thomas_hinkle@sf.net>

	* Finished switch to Makefile style build system.

2006-10-14  Thomas M. Hinkle  <thomas_hinkle@sf.net>

	* Created proper changelog.
	* Switched from setup.py to Makefile setup.
	* Created better always-show-hint mode
	* Made High Scores show integer value instead of ugly float.