@@ -1,3 +1,8 @@
+2006-11-03  Thomas M. Hinkle  <Thomas_Hinkle@alumni.brown.edu>
+
+	* src/lib/gnome_sudoku.py: Fix Bug 369531 [sudoku uses wrong icon for hints]
+	* src/lib/*: Remove extra files that don't belong in CVS.
+
 2006-10-30  Andreas Røsdal  <andrearo@pvv.ntnu.no>
 
 	* setup.py: Remove setup.py, which has been replaced by makefiles.
